[Cargo.toml] update keyword meta

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.4.1-dev.0"
 authors = ["Chris Simpkins <chris@sourcefoundry.org>"]
 license = "Apache-2.0"
 edition = "2021"
-keywords = ["vector", "math", "algebra", "computation", "algorithm"]
+keywords = ["vector", "math", "computation", "scalar", "real", "imaginary", "complex"]
 repository = "https://github.com/chrissimpkins/vectora"
 description = "A vector computation library"
 readme = "README.md"
