--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "vectora"
-version = "0.5.2-dev.0"
+version = "0.6.0"
 authors = ["Chris Simpkins <chris@sourcefoundry.org>"]
 license = "Apache-2.0"
 edition = "2021"
