--- a/.github/workflows/beta-unittests.yml
+++ b/.github/workflows/beta-unittests.yml
@@ -11,7 +11,7 @@ on:
 name: beta toolchain unit tests
 
 jobs:
-  unit-stable:
+  unit-beta:
     name: beta toolchain unit tests
     runs-on: ${{ matrix.os }}
     strategy:
@@ -26,3 +26,19 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: test
+
+  unit-beta-all-features:
+    name: beta toolchain unit tests
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: beta
+          override: true
+      - uses: actions-rs/cargo@v1
+        with:
+          command: test --all-features
