--- a/.github/workflows/lints.yml
+++ b/.github/workflows/lints.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: clippy
-          args: -- -D warnings
+          args: --all-features -- -D warnings
   clippy-beta:
     name: beta toolchain lints
     runs-on: ubuntu-latest
@@ -36,4 +36,4 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: clippy
-          args: -- -D warnings
+          args: --all-features -- -D warnings
