--- a/.github/workflows/beta-unittests.yml
+++ b/.github/workflows/beta-unittests.yml
@@ -41,4 +41,5 @@ jobs:
           override: true
       - uses: actions-rs/cargo@v1
         with:
-          command: test --all-features
+          command: test
+          args: --all-features
