change CI workflow arg approach for cargo test with all-features flag

--- a/.github/workflows/beta-unittests.yml
+++ b/.github/workflows/beta-unittests.yml
@@ -39,7 +39,4 @@ jobs:
         with:
           toolchain: beta
           override: true
-      - uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: --all-features
+      - run: cargo +beta test --all-features
