--- a/.github/workflows/nightly-unittests.yml
+++ b/.github/workflows/nightly-unittests.yml
@@ -39,7 +39,4 @@ jobs:
         with:
           toolchain: nightly
           override: true
-      - uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: --all-features
+      - run: cargo +nightly test --all-features
