--- a/.github/workflows/nightly-unittests.yml
+++ b/.github/workflows/nightly-unittests.yml
@@ -39,4 +39,7 @@ jobs:
         with:
           toolchain: nightly
           override: true
-      - run: cargo +nightly test --all-features
+      - uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: --all-features
