--- a/.github/workflows/stable-unittests.yml
+++ b/.github/workflows/stable-unittests.yml
@@ -39,4 +39,7 @@ jobs:
         with:
           toolchain: stable
           override: true
-      - run: cargo test --all-features
+      - uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: --all-features
