--- a/.github/workflows/stable-unittests.yml
+++ b/.github/workflows/stable-unittests.yml
@@ -12,7 +12,7 @@ name: stable toolchain unit tests
 
 jobs:
   unit-stable:
-    name: stable toolchain unit tests
+    name: default unit tests
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -28,7 +28,7 @@ jobs:
           command: test
 
   unit-stable-all-features:
-    name: stable toolchain all features unit tests
+    name: all features unit tests
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
