--- a/.github/workflows/nightly-unittests.yml
+++ b/.github/workflows/nightly-unittests.yml
@@ -26,6 +26,7 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: test
+          args: --lib
 
   unit-nightly-all-features:
     name: all features unit tests
@@ -42,4 +43,4 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: test
-          args: --all-features
+          args: --all-features --lib
