--- a/.github/workflows/stable-unittests.yml
+++ b/.github/workflows/stable-unittests.yml
@@ -8,11 +8,11 @@ on:
       - "test-*" # Push events to branches matching refs/heads/test-[ANYTHING]
   pull_request:
 
-name: stable toolchain unit tests
+name: unit tests (stable toolchain)
 
 jobs:
   unit-stable:
-    name: default unit tests
+    name: default
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -29,7 +29,7 @@ jobs:
           args: --lib
 
   unit-stable-all-features:
-    name: all features unit tests
+    name: all features
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
