update GHA workflows schedule

--- a/.github/workflows/lints.yml
+++ b/.github/workflows/lints.yml
@@ -1,10 +1,12 @@
 on:
   push:
-    branches:
-      - main
-      - "test/**" # Push events to branches matching refs/heads/test/[ANYTHING]
-      - "test-*" # Push events to branches matching refs/heads/test-[ANYTHING]
+    branches: [main]
+    tags: ["*"]
   pull_request:
+    types: [opened, synchronize, reopened]
+  release:
+    # A release, pre-release, or draft of a release was published
+    types: [published]
 
 name: clippy lints
 
